src/objects/PF_Release__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>PF_Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Approach_Strategy__c</fullName>
        <label>Approach (Strategy)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Deployment_Instance__c</fullName>
        <label>Deployment Instance</label>
        <picklist>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Key_Deliverables__c</fullName>
        <label>Key Deliverable&apos;s / Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Objectives__c</fullName>
        <label>Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Project__c</fullName>
        <label>Project</label>
        <referenceTo>PF_Project__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PF_Release_Type__c</fullName>
        <label>Release Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patch</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PF_Release_date_lies_between_Project</fullName>
        <active>true</active>
        <description>Release dates should lie between Project dates.</description>
        <errorConditionFormula>(PF_Planned_Start_Date__c &lt; PF_Project__r.PF_Actual_Start_Date__c  )|| (PF_Planned_End_Date__c &gt; PF_Project__r.PF_Actual_End_Date__c )</errorConditionFormula>
        <errorMessage>Release Start/End dates should lie within Project Start/end dates</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PF_Start_End_date_check</fullName>
        <active>true</active>
        <description>Start date cannot be greater than End date</description>
        <errorConditionFormula>PF_Planned_Start_Date__c &gt;  PF_Planned_End_Date__c</errorConditionFormula>
        <errorMessage>Start date cannot be greater than End date</errorMessage>
    </validationRules>
</CustomObject>